--- a/intersteller hackathon/orrery-web -app/root/css/3dearth.css
+++ b/intersteller hackathon/orrery-web -app/root/css/3dearth.css
@@ -32,9 +32,11 @@ h1{
 
 /* Overlay Styles */
 .overlay {
-    position:relative;
-    top: 10px;
+    position: absolute;
+    top: 20px;
     left: 20px;
+    justify-content: center;
+    flex: 10px;
     color: white;
     z-index: 10; /* Ensures it appears above the canvas */
 }
@@ -42,10 +44,11 @@ h1{
 /* Text Animation */
 .animated-text {
     display: inline-block;
-    animation: typing 2s steps(10, end), blink-caret 0.75s step-end infinite;
+    animation: typing 3s steps(10, end), blink-caret 0.75s step-end infinite;
     white-space: nowrap;
     overflow: hidden; /* Ensures no overflow */
-    border-right: 1px solid white; /* Creates a caret effect */
+    border-right: 6px solid rgb(83, 228, 0); /* Creates a caret effect */
+    color: #F4D06F;
 }
 
 @keyframes typing {
@@ -65,15 +68,3 @@ h1{
         border-color: white;
     }
 }
-.zoom-buttons {
-    position:relative;
-    bottom: -630px; /* Distance from the bottom */
-    right: -1310px;  /* Distance from the right */
-    z-index: 20;  /* Ensure it's above other content */
-}
-
-.zoom-buttons .btn {
-    margin: 0 5px; /* Space between buttons */
-}
-
-/* new header
